Fixed cut off post description issue, logo updated

--- a/blog/static/blog/blog.css
+++ b/blog/static/blog/blog.css
@@ -171,13 +171,15 @@ nav li:hover {
     border-radius:5px;
     min-height: 0px;
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     display:inline-block;
 }
 
 .post-card img {
     float:left;
-    margin-top:25px;
+    margin-right:20px;
+    min-height: 200px;
+    height:100%;
     object-fit: scale-down;
     border-radius: 5px;
     width:15%;
@@ -185,9 +187,8 @@ nav li:hover {
 
 .post-preview {
     margin-left:20px;
-    overflow:hidden;
-    min-height: 200px;
-    max-height: 200px;
+    
+
 }
 
 .post-title {
@@ -202,6 +203,13 @@ nav li:hover {
     padding: 0 40px 0px 40px;
     font-family: 'Open Sans', sans-serif;
     text-align: left;
+    text-overflow: hidden;
+}
+
+.line-clamp {
+    display:-webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
 }
 
 .post-title:hover {
@@ -588,7 +596,7 @@ footer {
 
     #post-detail {
         width:100%;
-        margin:5%;
+        margin: 0 30px 0 30px;
     }
 
     .post-detail-card {
@@ -676,5 +684,3 @@ footer {
         margin-left:2.5%
     }
 }
-
-
